--- a/IDW_19/CSS/styles.css
+++ b/IDW_19/CSS/styles.css
@@ -64,12 +64,10 @@ section h2{
 }
 
 .bienestar{
-    display: flex;
-    flex-wrap: wrap;
-    gap: 10px;
-    padding: 0;
-    margin: 0 0 15px 0;
-}
+    display: grid;
+    grid_template-colums: repeat (3,1fr);
+    gap: 25 px:
+   }
 
 .catalogo{
 
