--- a/IDW_19/CSS/styles.css
+++ b/IDW_19/CSS/styles.css
@@ -12,12 +12,10 @@ header {
     text-align: center;
     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.6);
 }
-
-
-
-header h1{
-margin: 0 0 10px 0;
-font-size: 2em;
+header h1 {
+    margin: 0 0 10px 0;
+    font-size: 2em;
+    text-align: center;
 }
 
 nav ul{
