--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -102,13 +102,13 @@ section h2{
 
 /* Estilo para imagenes Institucional*/
 .img-institucional {
-    width: 100%;          /* ocupa todo el ancho del contenedor */
-    max-width: 626px;     /* opcional, para no superar cierto ancho */
-    height: 416px;        /* altura uniforme */
-    object-fit: cover;    /* recorta la imagen para que llene el área sin deformarla */
-    border-radius: 6px;   /* opcional, esquinas redondeadas */
+    width: 100%;          
+    max-width: 626px;     
+    height: 416px;        
+    object-fit: cover;    
+    border-radius: 6px;   
     display: block;
-    margin: 1rem auto;    /* centrado */
+    margin: 1rem auto;    
 }
 
 footer{
