--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,9 +1,15 @@
 /* Estilos generales */
+html, body {
+    height: 100%;
+}
+
 body {
     font-family: Arial, Helvetica, sans-serif;
     background: #f4f4f4;
     margin: 0;
     color: black;
+    display: flex;
+    flex-direction: column;
 }
 
 header {
@@ -37,6 +43,7 @@ main {
     max-width: 1200px;
     margin: 40px auto 0 auto;
     padding: 0 15px;
+    flex: 1; 
 }
 
 section {
@@ -82,6 +89,17 @@ section h2 {
     background-color: #005f8d;
     border-color: #005f8d;
     color: white;
+}
+
+/* Form */
+.form-label-custom {
+    font-weight: bold;
+    color: #007bb5; 
+}
+
+.card h4 {
+    font-size: 1.2em; 
+    margin-bottom: 10px;
 }
 
 /* Footer */
